--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "express": "3",
-    "aws-sdk": "*",
     "mocha": "*",
     "should": "*",
     "ejs": "*",
     "crypto": "*",
     "mongodb": "*",
     "moment": "*",
-    "json-csv": "*"
+    "json-csv": "*",
+    "paypal-rest-sdk": "*"
   }
 }
