--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ozanam-gala-website",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "private": true,
   "scripts": {
     "start": "node app"
@@ -17,7 +17,9 @@
     "crypto": "*",
     "mongodb": "*",
     "moment": "*",
+    "moment-timezone": "*",
     "json-csv": "*",
-    "paypal-rest-sdk": "*"
+    "paypal-rest-sdk": "*",
+    "emailjs": "*"
   }
 }
