added SES test program

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "moment": "*",
     "moment-timezone": "*",
     "json-csv": "*",
-    "paypal-rest-sdk": "*",
-    "emailjs": "*"
+    "paypal-rest-sdk": "*"
   }
 }
