Major updates. Express4, view engine switch to Handlebars, bower for a few things.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+*.seed
+*.log
+*.dat
+*.out
+*.pid
+*.gz
+env.*.sh
+node_modules
+pids
+logs
+results
+
+npm-debug.log
+.DS_Store
+public/bower_components
+private
+cookie
+
+*.sublime-workspace
+
 Thumbs.db
 env.*.sh
 .idea
