--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,12 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1",
+    "bootstrap": "~3.2.0",
     "handlebars": "~1.3.0",
-    "font-awesome": "~4.0.3",
-    "jquery.validation": "~1.11.1"
+    "jquery.validation": "~1.13.0",
+    "moment-datepicker": "MakingSense/moment-datepicker#~1.1.3",
+    "datatables": "~1.10.1",
+    "font-awesome": "~4.1.0",
+    "jquery": "~2.1.1"
   }
 }
