--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   },
   "dependencies": {
     "async": "^0.7.0",
-    "aws-sdk": "^2.0.0-rc.15",
+    "aws-sdk": "^2.0.4",
     "bcrypt": "^0.7.8",
     "body-parser": "^1.0.2",
-    "bower": "^1.3.3",
+    "bower": "^1.3.8",
     "colors": "^0.6.2",
     "commander": "^2.2.0",
     "connect-redis": "^2.0.0",
-    "cookie-parser": "^1.0.1",
-    "debug": "~0.7.4",
+    "cookie-parser": "^1.3.2",
+    "debug": "^0.7.4",
     "express": "^4.1.0",
-    "express-session": "^1.0.3",
+    "express-session": "^1.6.1",
     "express3-handlebars": "^0.5.0",
     "handlebars": "^2.0.0-alpha.2",
     "jade": "~1.3.0",
-    "json-csv": "0.0.7",
+    "json-csv": "0.0.8",
     "lodash": "^2.4.1",
     "moment": "^2.6.0",
     "moment-timezone": "0.0.6",
     "mongodb": "^1.4.2",
-    "morgan": "~1.0.0",
+    "morgan": "^1.0.1",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "paypal-rest-sdk": "^0.9.0",
