--- a/bower.json
+++ b/bower.json
@@ -21,12 +21,12 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.2.0",
     "handlebars": "~1.3.0",
     "jquery.validation": "~1.13.0",
-    "moment-datepicker": "MakingSense/moment-datepicker#~1.1.3",
     "datatables": "~1.10.1",
     "font-awesome": "~4.1.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "moment": "~2.8.0",
+    "bootstrap-datepicker": "~1.3.0"
   }
 }
