--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
   },
   "dependencies": {
     "async": "^0.7.0",
-    "aws-sdk": "^2.0.4",
+    "aws-sdk": "^2.0.15",
     "bcrypt": "^0.7.8",
-    "body-parser": "^1.0.2",
-    "bower": "^1.3.8",
+    "body-parser": "^1.6.5",
+    "bower": "^1.3.9",
     "colors": "^0.6.2",
     "commander": "^2.2.0",
     "connect-redis": "^2.0.0",
     "cookie-parser": "^1.3.2",
     "debug": "^0.7.4",
-    "express": "^4.1.0",
-    "express-session": "^1.6.1",
-    "express3-handlebars": "^0.5.0",
+    "express": "^4.8.5",
+    "express-handlebars": "^1.0.1",
+    "express-session": "^1.7.6",
     "handlebars": "^2.0.0-alpha.2",
-    "jade": "~1.3.0",
-    "json-csv": "0.0.8",
+    "jade": "^1.3.1",
+    "json-csv": "^1.0.1",
     "lodash": "^2.4.1",
     "moment": "^2.6.0",
     "moment-timezone": "0.0.6",
     "mongo-repo": "git://github.com/iwsllc/mongo-repo",
     "mongodb": "^1.4.2",
-    "morgan": "^1.0.1",
+    "morgan": "^1.2.3",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
-    "paypal-rest-sdk": "^0.9.0",
-    "redis": "^0.10.1",
+    "paypal-rest-sdk": "^0.9.3",
+    "redis": "^0.10.3",
     "static-favicon": "^1.0.2"
   },
   "description": "Ozanam Gala Website",
