--- a/bower.json
+++ b/bower.json
@@ -21,12 +21,13 @@
     "tests"
   ],
   "dependencies": {
-    "handlebars": "~1.3.0",
-    "jquery.validation": "~1.13.0",
-    "datatables": "~1.10.1",
-    "font-awesome": "~4.1.0",
-    "jquery": "~2.1.1",
-    "moment": "~2.8.0",
-    "bootstrap-datepicker": "~1.3.0"
+    "handlebars": "^1.3.0",
+    "jquery.validation": "^1.13.1",
+    "datatables": "^1.10.7",
+    "font-awesome": "^4.3.0",
+    "jquery": "^2.1.4",
+    "moment": "^2.10.2",
+    "bootstrap-datepicker": "^1.4.0",
+    "bootstrap": "^3.3.4"
   }
 }
