--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ozanam-gala",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "postinstall": "./post-install.sh",
@@ -8,37 +8,43 @@
     "test": "mocha"
   },
   "dependencies": {
-    "async": "^0.7.0",
-    "aws-sdk": "^2.0.15",
-    "bcrypt": "^0.7.8",
-    "body-parser": "^1.6.5",
-    "bower": "^1.3.9",
-    "colors": "^0.6.2",
-    "commander": "^2.2.0",
-    "connect-redis": "^2.0.0",
-    "cookie-parser": "^1.3.2",
-    "debug": "^0.7.4",
-    "express": "^4.8.5",
-    "express-handlebars": "^1.0.1",
-    "express-session": "^1.7.6",
-    "handlebars": "^2.0.0-alpha.2",
-    "jade": "^1.3.1",
-    "json-csv": "^1.0.1",
-    "lodash": "^2.4.1",
-    "moment": "^2.6.0",
-    "moment-timezone": "0.0.6",
+    "async": "^0.9.0",
+    "aws-sdk": "^2.1.26",
+    "bcrypt": "^0.8.2",
+    "body-parser": "^1.12.3",
+    "bower": "^1.4.1",
+    "colors": "^1.1.0",
+    "commander": "^2.8.1",
+    "connect-redis": "^2.3.0",
+    "cookie-parser": "^1.3.4",
+    "debug": "^2.1.3",
+    "express": "^4.12.3",
+    "express-handlebars": "^2.0.1",
+    "express-session": "^1.11.1",
+    "handlebars": "^3.0.3",
+    "jade": "^1.9.2",
+    "json-csv": "^1.0.5",
+    "lodash": "^3.8.0",
+    "moment": "^2.git 10.2",
+    "moment-timezone": "^0.3.1",
     "mongo-repo": "git://github.com/iwsllc/mongo-repo",
-    "mongodb": "^1.4.2",
-    "morgan": "^1.2.3",
-    "passport": "^0.2.0",
+    "mongodb": "^2.0.28",
+    "morgan": "^1.5.2",
+    "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "paypal-rest-sdk": "^0.9.3",
-    "redis": "^0.10.3",
-    "static-favicon": "^1.0.2"
+    "paypal-rest-sdk": "^1.5.2",
+    "redis": "^0.12.1"
   },
   "description": "Ozanam Gala Website",
   "main": "src/app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.1.1",
+    "run-sequence": "^1.1.0"
+  },
   "author": "nathan@iws.io",
   "license": "MIT"
 }
