--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
   "description": "Ozanam Gala Website",
   "main": "src/app.js",
   "devDependencies": {
+    "coffee-script": "^1.9.3",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.1.1",
-    "run-sequence": "^1.1.0"
+    "mocha": "^2.2.5",
+    "run-sequence": "^1.1.0",
+    "should": "^6.0.3",
+    "sinon": "^1.14.1"
   },
   "author": "nathan@iws.io",
   "license": "MIT"
