--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
   "name": "ozanam-gala",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
     "postinstall": "./post-install.sh",
     "start": "node ./bin/www",
     "test": "mocha"
   },
+  "engines": {
+    "node": "5.3.x",
+    "npm": "3.3.x"
+  },
   "dependencies": {
-    "async": "^0.9.0",
-    "aws-sdk": "^2.1.26",
-    "bcrypt": "^0.8.2",
-    "body-parser": "^1.12.3",
-    "bower": "^1.4.1",
-    "colors": "^1.1.0",
-    "commander": "^2.8.1",
-    "connect-redis": "^2.3.0",
-    "cookie-parser": "^1.3.4",
-    "debug": "^2.1.3",
-    "express": "^4.12.3",
+    "async": "^1.5.0",
+    "aws-sdk": "^2.2.26",
+    "bcrypt": "^0.8.5",
+    "body-parser": "^1.14.2",
+    "bower": "^1.7.2",
+    "colors": "^1.1.2",
+    "commander": "^2.9.0",
+    "connect-redis": "^3.0.1",
+    "cookie-parser": "^1.4.0",
+    "debug": "^2.2.0",
+    "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
-    "express-session": "^1.11.1",
-    "handlebars": "^3.0.3",
-    "jade": "^1.9.2",
-    "json-csv": "^1.0.5",
-    "lodash": "^3.8.0",
-    "moment": "^2.0.2",
-    "moment-timezone": "^0.3.1",
-    "mongo-repo": "git://github.com/iwsllc/mongo-repo",
-    "mongodb": "^2.0.28",
-    "morgan": "^1.5.2",
-    "passport": "^0.2.1",
+    "express-session": "^1.12.1",
+    "handlebars": "^4.0.5",
+    "jade": "^1.11.0",
+    "json-csv": "^1.2.0",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
+    "moment-timezone": "^0.5.0",
+    "mongo-repo": "github:iwsllc/mongo-repo",
+    "mongodb": "^2.1.2",
+    "morgan": "^1.6.1",
+    "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "paypal-rest-sdk": "^1.5.2",
-    "redis": "^0.12.1"
+    "paypal-rest-sdk": "^1.6.8",
+    "redis": "^2.4.2"
   },
   "description": "Ozanam Gala Website",
   "main": "src/app.js",
   "devDependencies": {
-    "coffee-script": "^1.9.3",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.1.1",
-    "mocha": "^2.2.5",
-    "run-sequence": "^1.1.0",
-    "should": "^6.0.3",
-    "sinon": "^1.14.1"
+    "coffee-script": "^1.10.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.3",
+    "mocha": "^2.3.4",
+    "run-sequence": "^1.1.5",
+    "should": "^8.0.2",
+    "sinon": "^1.17.2"
   },
   "author": "nathan@iws.io",
   "license": "MIT"
