--- a/package.json
+++ b/package.json
@@ -12,46 +12,50 @@
     "npm": "3.3.x"
   },
   "dependencies": {
-    "async": "^1.5.0",
-    "aws-sdk": "^2.2.26",
+    "async": "^2.0.0-rc.2",
+    "aws-sdk": "^2.2.46",
     "bcrypt": "^0.8.5",
-    "body-parser": "^1.14.2",
-    "bower": "^1.7.2",
-    "colors": "^1.1.2",
+    "body-parser": "^1.15.0",
+    "bower": "^1.7.7",
     "commander": "^2.9.0",
-    "connect-redis": "^3.0.1",
-    "cookie-parser": "^1.4.0",
+    "connect-redis": "^3.0.2",
+    "cookie-parser": "^1.4.1",
     "debug": "^2.2.0",
-    "express": "^4.13.3",
-    "express-handlebars": "^2.0.1",
-    "express-session": "^1.12.1",
+    "express": "^4.13.4",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.13.0",
     "handlebars": "^4.0.5",
     "jade": "^1.11.0",
     "json-csv": "^1.2.0",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "moment-timezone": "^0.5.0",
-    "mongo-repo": "github:iwsllc/mongo-repo",
-    "mongodb": "^2.1.2",
-    "morgan": "^1.6.1",
+    "lodash": "^4.6.1",
+    "moment": "^2.12.0",
+    "moment-timezone": "^0.5.2",
+    "mongo-repo": "iwsllc/mongo-repo",
+    "mongodb": "^2.1.11",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "paypal-rest-sdk": "^1.6.8",
-    "redis": "^2.4.2"
+    "redis": "^2.5.3"
   },
   "description": "Ozanam Gala Website",
   "main": "src/app.js",
   "devDependencies": {
+    "bootstrap": "^3.3.6",
+    "bootstrap-datepicker": "^1.6.0",
     "coffee-script": "^1.10.0",
+    "datatables": "^1.10.11",
     "del": "^2.2.0",
-    "gulp": "^3.9.0",
+    "font-awesome": "^4.5.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.5",
-    "gulp-minify-css": "^1.2.3",
-    "mocha": "^2.3.4",
+    "gulp-minify-css": "^1.2.4",
+    "jquery-validation": "^1.15.0",
+    "mocha": "^2.4.5",
     "run-sequence": "^1.1.5",
-    "should": "^8.0.2",
-    "sinon": "^1.17.2"
+    "should": "^8.3.0",
+    "sinon": "^1.17.3"
   },
   "author": "nathan@iws.io",
   "license": "MIT"
